revision using bootstrap

--- a/CaseStudy_RarityNinja/sass/abstracts/_mixins.scss
+++ b/CaseStudy_RarityNinja/sass/abstracts/_mixins.scss
@@ -30,4 +30,7 @@ ORDER: Base + typography > general layout + grid > page layout > components
     @if $breakpoint == mini-desktop {
         @media only screen and (max-width: 1200px) { @content };
     }
+    @if $breakpoint == large-desktop {
+        @media only screen and (max-width: 1440px) { @content };
+    }
 }
