--- a/CaseStudy_RarityNinja/sass/base/_base.scss
+++ b/CaseStudy_RarityNinja/sass/base/_base.scss
@@ -13,7 +13,7 @@ html {
     //arrange decrease
 
     @include respond(mini-desktop) {
-        font-size: 56.25%; //1rem=1px, 9/16=56.25%
+        font-size: 56.25%; //1rem=9px, 9/16=56.25%
     }
 
     @include respond(tablet) {
@@ -27,4 +27,8 @@ html {
 
 body {
     box-sizing: border-box;
+}
+
+.container-xxl {
+    padding: 0;
 }
