--- a/CaseStudy_RarityNinja/sass/base/_typography.scss
+++ b/CaseStudy_RarityNinja/sass/base/_typography.scss
@@ -48,6 +48,7 @@ body {
     line-height: 2.4rem;
     letter-spacing: 0.5%;
     opacity: 70%;
+    margin-bottom: 0;
 
     &__dark {
         color: $color-primary-light;
