--- a/CaseStudy_RarityNinja/sass/layout/_footer.scss
+++ b/CaseStudy_RarityNinja/sass/layout/_footer.scss
@@ -1,19 +1,9 @@
-.footers {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
+footer {
     background-color: $color-primary-light;
 }
 
 .footer {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 
     &__nav {
         display: flex;
@@ -31,15 +21,7 @@
     }
 }
 
-.copyright {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    flex-direction: row;
-    border-top: 1.5px solid rgba($color-white, .1);
-
+#copyright {
     padding: 3.2rem 16rem 4rem 16rem;
 
     @include respond(mini-desktop) {
@@ -53,6 +35,9 @@
     @include respond(large-mobile) {
         padding: 4rem 2.4rem;
     }
+}
+.copyright {
+    border-top: 1.5px solid rgba($color-white, .1);
 
     & p {
         color: $color-white;
@@ -60,10 +45,6 @@
     }
 
     &__socmed {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
         gap: 4rem;
         color: $color-white;
 
