--- a/CaseStudy_RarityNinja/sass/layout/_header.scss
+++ b/CaseStudy_RarityNinja/sass/layout/_header.scss
@@ -28,6 +28,7 @@
 .navbar-toggler {
     border: none;
     color: $color-primary-light;
+    margin-bottom: 1rem;
 
     &-icon {
         width: 3.5rem;
